# aegisai_vaic-26

./: .gitignore  DEPLOYMENT.md  Dockerfile  README.md  SPEC.md  artifact.html  civilisations.html  data.js  database.html  docker-compose.yml  homepage.html  implementation_plan.md  inheritable_data.js  render.yaml  run_local.bat  vietheritage.db
ArtifactBot/: app.py
Project/: Note.txt  PROVINCES.geojson  VNMT.css  VNMT.html  VNMT.js  about.html  about.js  artifact.html  batch12_extra_patch.tmp  civilisations.html  data.js  database.html  dissolve_pro  dissolve_provinces.py  index.html  inheritable_data.js  merge_b  todo.md  vn_geo.json
backend/: .env.example  Dockerfile  Dockerfile.prod  debug_vocal.py  pyproject.toml  render.yaml  requirements.txt  test_onnx_model.py  vercel.json  vietheritage.db
backend/app/: main.py
backend/app/api/: __init__.py
backend/app/api/v1/: artisan.py  audio.py  chat.py  monitoring.py  recommend.py  sites.py
backend/app/core/: __init__.py  cache.py  config.py  database.py  monitoring.py
backend/app/data/: treasures.json
backend/app/models/: __init__.py  artisan.py  audio_asset.py  site.py
backend/app/schemas/: audio.py  chat.py  site.py
backend/app/services/: audio_analysis.py  embedding_service.py  grounded_chat.py  local_chat.py  openrouter_service.py  rag_lite.py  recommendation.py  small_talk.py
backend/models/: best_model.pth  ethnomusic_net_int8.onnx  ethnomusic_net_int8.onnx.data
backend/scripts/: create_placeholders.py  dissolve_provinces.py  export_treasures.py  import_intangible.py  ingest_knowledge.py  init-db.sql  local_fallback.sh  seed_audio.py  seed_database.py  start.sh  test_chatbot.py  train_genre_classifier.py
backend/tests/: test_trick_questions.py
docs/: placeholder-replacement.md
frontend/: netlify.toml  package.json  (+2 more)
(+10 files in other folders)
